[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "timestamp-store"
version = "1.0.0"
description = "Fast timestamp-based data structure with O(log N) operations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Shutkanos", email = "Shutkanos836926@mail.ru"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.99",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
keywords = ["timestamp", "data-structure", "fast", "ctypes"]

[project.urls]
Homepage = "https://github.com/yourusername/timestamp-store"
Repository = "https://github.com/yourusername/timestamp-store"

[tool.setuptools.packages.find]
where = ["."]
include = ["timestamp_store*"]

[tool.setuptools.package-data]
timestamp_store = ["src/*.cpp", "*.so", "*.dylib", "*.dll"]